# ScheduleBot

./: MANIFEST.in  README.md  requirements.txt  run.bat  setup.cfg  setup.py
schedulebot/: __main__.py  conf.py  logger.py  main.py
schedulebot/cogs/: calendar.py  testcalendar.py
schedulebot/data/: settings.ini
schedulebot/discordplus/: __init__.py
schedulebot/extensions/: errorhandler.py
schedulebot/lib/: db.py  errors.py  logger.py  loglevels.py  paths.py  strint.py  utils.py
