[metadata]
name = schedulebot
version = attr: schedulebot.__version__
description = ScheduleBot
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = calendar
project_urls =
    Source=https://github.com/digiduncan/schedulebot
    Tracker=https://github.com/digiduncan/schedulebot/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
include_package_data = True
install_requires =
    discord.py==1.5.1
    discord-py-interactions==3.0.2
    discordn==1.2.2
    appdirs==1.4.3
    toml==0.10.0
    colored==1.4.2
    digiformatter==0.5.7.2
    arrow==0.15.6
    pytz==2020.4
    pony==0.7.14
    digical @ git+https://git@github.com/nfearnley/digical.git

[options.entry_points]
console_scripts =
    schedulebot = schedulebot.main:main

[options.extras_require]
dev =
    pytest==6.2.2
    flake8==3.8.4
    autopep8==1.5.5

[flake8]
ignore = E241,E251,E501,W503,E266
per-file-ignores =
    */__init__.py:F401
